Enhance README with UI details and setup instructions
Added detailed information about the User Interface implementation, project overview, folder structure, tech stack, and setup instructions for the Library Management System.